# basic_tar

./: Cargo.toml  README.md
src/: helpers.rs  lib.rs
src/header/: mod.rs  raw.rs
tests/: predefined.rs  predefined_0.macos  predefined_0.pax  predefined_0.plain  predefined_1.macos  predefined_1.pax  predefined_1.plain  predefined_bsd.tar  predefined_nul.tar
tests/tar_record/: mod.rs
