[package]
name = "basic_tar"
version = "0.1.1"
edition = "2018"
authors = ["KizzyCode/Keziah Biermann <development@kizzycode.de>"]
description = "Building blocks to read and write classic oldstyle tar archives and streams"
keywords = ["tar", "tarfile", "encoding"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/basic_tar"
readme = "README.md"

[badges]
travis-ci = { repository = "KizzyCode/basic_tar" }
appveyor = { repository = "KizzyCode/basic_tar" }
maintenance = { status = "passively-maintained" }
is-it-maintained-open-issues = { repository = "KizzyCode/basic_tar" }
is-it-maintained-issue-resolution = { repository = "KizzyCode/basic_tar" }


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true